php56/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php56
  labels:
    app: php56
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php56
  template:
    metadata:
      labels:
        app: php56
    spec:
      containers:
      - name: php56
        image: idan77/php56-fpm:1.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
