php56/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: legacy-nginx
spec:
  selector:
    app: legacy-nginx
  ports:
  - port: 80
    targetPort: 80
