php56/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php56
spec:
  selector:
    app: php56
  ports:
  - port: 9000
    targetPort: 9000
